update train file

--- a/TensorFlow con Docker/files/CNNcatdogs/entrenamiento.ipynb
+++ b/TensorFlow con Docker/files/CNNcatdogs/entrenamiento.ipynb
@@ -166,7 +166,7 @@
     "\n",
     "print(\"crear capa totalmente concetada 1, tamanoDeCapaTotalmenteConectada= \"+str(tamanoDeCapaTotalmenteConectada)+\", numeroClases= \"+str(numeroClases))\n",
     "\n",
-    "capaTotalmenteConectada2 = crearCapaTotalmenteConectada(tensorDeEntrada=capaTotalmenteConectada1,\n",
+    "capaTotalmenteConectada2 = cnn.crearCapaTotalmenteConectada(tensorDeEntrada=capaTotalmenteConectada1,\n",
     "                     num_inputs=tamanoDeCapaTotalmenteConectada,\n",
     "                     num_outputs=numeroClases,\n",
     "                     use_relu=False)\n",
