--- a/TensorFlow con Docker/files/CNNcatdogs/entrenamiento.ipynb
+++ b/TensorFlow con Docker/files/CNNcatdogs/entrenamiento.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -25,7 +25,7 @@
     "\n",
     "#importa la clase conjuntoDeDatos, esta obtiene las imagenes de entrenamiento por cada subcarpeta o clases de imagenes. \n",
     "import conjuntoDeDatos\n",
-    "import CNN as cnn\n",
+    "import CNN\n",
     "import tensorflow as tf\n",
     "import time\n",
     "from datetime import timedelta\n",
@@ -75,103 +75,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From <ipython-input-2-77eb8f0bd43c>:6: calling argmax (from tensorflow.python.ops.math_ops) with dimension is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use the `axis` argument instead\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "session = tf.Session()\n",
-    "x = tf.placeholder(tf.float32, shape=[None, tamanoDeImagenes,tamanoDeImagenes,numeroDeColoresPorImagen], name='x')\n",
+    "tensorDeEntrada = tf.placeholder(tf.float32, shape=[None, tamanoDeImagenes,tamanoDeImagenes,numeroDeColoresPorImagen], name='tensorDeEntrada')\n",
     "\n",
     "## Etiquetas\n",
     "tensorDeClases = tf.placeholder(tf.float32, shape=[None, numeroClases], name='tensorDeClases')\n",
-    "tensorDeClasesAplanado = tf.argmax(tensorDeClases, dimension=1)\n",
-    "\n",
-    "##Parametros graficos de red\n",
-    "# El parametro mas importante en una red convolucional es el tamaño del filtro de cada neurona.  Por ejemplo si entrada de la neurona es una imagen de 32x32x3, esto significa que la imagen tiene una dimension de 32x32 (alto x ancho) pixeles y contiene 3 colores RGB, entonces el filtro significa que se convertiran las imagenes a 5x5x3, es decir 5x5 (alto x ancho) y 3 representa el numero de colores RGB.\n",
-    "\n",
-    "#Configuracion de la primera capa oculta, el tamaño del filtro es 3 y el numero de filtros es 32\n",
-    "#filter_size_conv1\n",
-    "#num_filters_conv1\n",
-    "tamanoFiltroCapaConvolucional1 = 3\n",
-    "numeroFiltrosCapaConvolucional1 = 32\n",
-    "\n",
-    "tamanoFiltroCapaConvolucional2 = 3\n",
-    "numeroFiltrosCapaConvolucional2 = 32\n",
-    "\n",
-    "tamanoFiltroCapaConvolucional3 = 3\n",
-    "numeroFiltrosCapaConvolucional3 = 64\n",
-    "\n",
-    "tamanoDeCapaTotalmenteConectada = 128"
+    "tensorDeClasesAplanado = tf.argmax(tensorDeClases, dimension=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "crear capa totalmente concetada 1, tamanoDeCapaTotalmenteConectada= 128, numeroClases= 2\n",
-      "crear capa totalmente concetada 2, tamanoDeCapaTotalmenteConectada= 128, numeroClases= 2\n",
-      "WARNING:tensorflow:From <ipython-input-5-f7b62baefa01>:52: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "\n",
-      "Future major versions of TensorFlow will allow gradients to flow\n",
-      "into the labels input on backprop by default.\n",
-      "\n",
-      "See tf.nn.softmax_cross_entropy_with_logits_v2.\n",
-      "\n"
+     "ename": "AttributeError",
+     "evalue": "'module' object has no attribute 'CNN'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-8889731a3a4c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#Configuracion de la primera capa oculta, el tamaño del filtro es 3 y el numero de filtros es 32\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m capaConvolucional1 = CNN.CNN.crearCapaConvolucional(tensorDeEntrada=tensorDeEntrada,\n\u001b[0m\u001b[1;32m      7\u001b[0m                \u001b[0mnumeroDeCanales\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnumeroDeColoresPorImagen\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m                \u001b[0mtamanoDelFiltro\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'module' object has no attribute 'CNN'"
      ]
     }
    ],
    "source": [
-    "capaConvolucional1 = cnn.crearCapaConvolucional(tensorDeEntrada=x,\n",
-    "               num_input_channels=numeroDeColoresPorImagen,\n",
-    "               conv_filter_size=tamanoFiltroCapaConvolucional1,\n",
-    "               num_filters=numeroFiltrosCapaConvolucional1)\n",
+    "##Parametros graficos de red\n",
+    "# El parametro mas importante en una red convolucional es el tamaño del filtro de cada neurona.  Por ejemplo si entrada de la neurona es una imagen de 32x32x3, esto significa que la imagen tiene una dimension de 32x32 (alto x ancho) pixeles y contiene 3 colores RGB, entonces el filtro significa que se convertiran las imagenes a 5x5x3, es decir 5x5 (alto x ancho) y 3 representa el numero de colores RGB.\n",
     "\n",
-    "capaConvolucional2 = cnn.crearCapaConvolucional(tensorDeEntrada=capaConvolucional1,\n",
-    "               num_input_channels=numeroFiltrosCapaConvolucional1,\n",
-    "               conv_filter_size=tamanoFiltroCapaConvolucional2,\n",
-    "               num_filters=numeroFiltrosCapaConvolucional2)\n",
+    "#Configuracion de la primera capa oculta, el tamaño del filtro es 3 y el numero de filtros es 32\n",
     "\n",
-    "capaConvolucional3= cnn.crearCapaConvolucional(tensorDeEntrada=capaConvolucional1,\n",
-    "               num_input_channels=numeroFiltrosCapaConvolucional2,\n",
-    "               conv_filter_size=tamanoFiltroCapaConvolucional3,\n",
-    "               num_filters=numeroFiltrosCapaConvolucional3)\n",
+    "capaConvolucional1 = CNN.CNN.crearCapaConvolucional(tensorDeEntrada=tensorDeEntrada,\n",
+    "               numeroDeCanales=numeroDeColoresPorImagen,\n",
+    "               tamanoDelFiltro=3,\n",
+    "               numeroDeFiltros=32)\n",
     "\n",
-    "capaPlana = cnn.crearCapaAplanada(capaConvolucional3)\n",
+    "capaConvolucional2 = CNN.CNN.crearCapaConvolucional(tensorDeEntrada=capaConvolucional1,\n",
+    "               numeroDeCanales=numeroFiltrosCapaConvolucional1,\n",
+    "               tamanoDelFiltro=3,\n",
+    "               numeroDeFiltros=32)\n",
     "\n",
-    "capaTotalmenteConectada1 = cnn.crearCapaTotalmenteConectada(tensorDeEntrada=capaPlana,\n",
+    "capaConvolucional3= CNN.CNN.crearCapaConvolucional(tensorDeEntrada=capaConvolucional1,\n",
+    "               numeroDeCanales=32,\n",
+    "               tamanoDelFiltro=3,\n",
+    "               numeroDeFiltros=64)\n",
+    "\n",
+    "capaPlana = CNN.CNN.crearCapaAplanada(capaConvolucional3)\n",
+    "\n",
+    "capaTotalmenteConectada1 = CNN.CNN.crearCapaTotalmenteConectada(tensorDeEntrada=capaPlana,\n",
     "                     num_inputs=capaPlana.get_shape()[1:4].num_elements(),\n",
-    "                     num_outputs=tamanoDeCapaTotalmenteConectada,\n",
+    "                     num_outputs=128,\n",
     "                     use_relu=True)\n",
     "\n",
-    "print(\"crear capa totalmente concetada 1, tamanoDeCapaTotalmenteConectada= \"+str(tamanoDeCapaTotalmenteConectada)+\", numeroClases= \"+str(numeroClases))\n",
-    "\n",
-    "capaTotalmenteConectada2 = cnn.crearCapaTotalmenteConectada(tensorDeEntrada=capaTotalmenteConectada1,\n",
-    "                     num_inputs=tamanoDeCapaTotalmenteConectada,\n",
+    "capaTotalmenteConectada2 = CNN.CNN.crearCapaTotalmenteConectada(tensorDeEntrada=capaTotalmenteConectada1,\n",
+    "                     num_inputs=128,\n",
     "                     num_outputs=numeroClases,\n",
     "                     use_relu=False)\n",
-    "\n",
-    "print(\"crear capa totalmente concetada 2, tamanoDeCapaTotalmenteConectada= \"+str(tamanoDeCapaTotalmenteConectada)+\", numeroClases= \"+str(numeroClases))\n",
     "\n",
     "#Softmax: Calcula las activaciones softmax, los argumentos de la funcion son:\n",
     "## logits: es un tenson no vacio.  Puede ser uno de los siguientes tipos \"half, float32, float64\"\n",
@@ -205,41 +174,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------- FUNCION DE ENTRENAMIENTO  ------------------\n",
-      "numero de imagenes para entrenamiento 77\n",
-      "-- iteracion # 1\n",
-      "siguiente lote, inicio: 0, fin: 4\n",
-      "siguiente lote, inicio: 0, fin: 4\n",
-      "mostrar epoca 19\n",
-      "Training epoca 1 --- Exactitud del entranamiento: 100.0%, Exactitud de validacion: 100.0%,  perida de validacion: 0.203\n",
-      "-- iteracion # 2\n",
-      "siguiente lote, inicio: 4, fin: 8\n",
-      "siguiente lote, inicio: 4, fin: 8\n",
-      "-- iteracion # 3\n",
-      "siguiente lote, inicio: 8, fin: 12\n",
-      "siguiente lote, inicio: 8, fin: 12\n",
-      "-- iteracion # 4\n",
-      "siguiente lote, inicio: 12, fin: 16\n",
-      "siguiente lote, inicio: 12, fin: 16\n",
-      "-- iteracion # 5\n",
-      "siguiente lote, inicio: 16, fin: 20\n",
-      "siguiente lote, inicio: 0, fin: 4\n",
-      "-- iteracion # 6\n",
-      "siguiente lote, inicio: 20, fin: 24\n",
-      "siguiente lote, inicio: 4, fin: 8\n",
-      "end\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def mostrarProgreso(epoca, feed_dict_train, feed_dict_validate, perdidaDeValidacion):\n",
     "    exactitudDeEntrenamiento = session.run(exactitudDelModelo, feed_dict=feed_dict_train)\n",
@@ -251,7 +190,7 @@
     "\n",
     "\"\"\" batch-size (tamaño del lote por iteracion), cuando se entrena una red no se  alimenta con todo el conjunto de datos, se hace por medio de iteracion y cada iteracion tiene un tamaño, frecuentemente es 16 o 32\"\"\"\n",
     "\n",
-    "tamanoLotePorIteracion = 4\n",
+    "#tamanoLotePorIteracion = 32\n",
     "saver = tf.train.Saver()\n",
     "\n",
     "def entrenarModelo(totalIteraciones):\n",
@@ -281,7 +220,7 @@
     "\n",
     "    recuentoIteraciones += totalIteraciones\n",
     "\n",
-    "entrenarModelo(totalIteraciones=6)\n",
+    "entrenarModelo(totalIteraciones=3000)\n",
     "print(\"end\")"
    ]
   }
