fix in CNN class

--- a/TensorFlow con Docker/files/CNNcatdogs/entrenamiento.ipynb
+++ b/TensorFlow con Docker/files/CNNcatdogs/entrenamiento.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -13,10 +13,7 @@
      "text": [
       "ruta de datos de entrenamiento /notebooks/CNNcatdogs/imagenes/train/\n",
       "Now going to read dog files (indiceDeClase: 0)\n",
-      "Now going to read cat files (indiceDeClase: 1)\n",
-      "Completado el proceso de lecturada de imagenes.\n",
-      "Numero de imagenes en el conjunto de entrenamiento:\t77\n",
-      "Numero de imagenes en el conjunto de validacion :\t19\n"
+      "Now going to read cat files (indiceDeClase: 1)\n"
      ]
     }
    ],
@@ -75,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -91,24 +88,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'module' object has no attribute 'CNN'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-8889731a3a4c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#Configuracion de la primera capa oculta, el tamaño del filtro es 3 y el numero de filtros es 32\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m capaConvolucional1 = CNN.CNN.crearCapaConvolucional(tensorDeEntrada=tensorDeEntrada,\n\u001b[0m\u001b[1;32m      7\u001b[0m                \u001b[0mnumeroDeCanales\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnumeroDeColoresPorImagen\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m                \u001b[0mtamanoDelFiltro\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'module' object has no attribute 'CNN'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##Parametros graficos de red\n",
     "# El parametro mas importante en una red convolucional es el tamaño del filtro de cada neurona.  Por ejemplo si entrada de la neurona es una imagen de 32x32x3, esto significa que la imagen tiene una dimension de 32x32 (alto x ancho) pixeles y contiene 3 colores RGB, entonces el filtro significa que se convertiran las imagenes a 5x5x3, es decir 5x5 (alto x ancho) y 3 representa el numero de colores RGB.\n",
