first functional version

--- a/TensorFlow con Docker/files/CNNcatdogs/entrenamiento.ipynb
+++ b/TensorFlow con Docker/files/CNNcatdogs/entrenamiento.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,10 @@
      "text": [
       "ruta de datos de entrenamiento /notebooks/CNNcatdogs/imagenes/train/\n",
       "Now going to read dog files (indiceDeClase: 0)\n",
-      "Now going to read cat files (indiceDeClase: 1)\n"
+      "Now going to read cat files (indiceDeClase: 1)\n",
+      "Completado el proceso de lecturada de imagenes.\n",
+      "Numero de imagenes en el conjunto de entrenamiento:\t800\n",
+      "Numero de imagenes en el conjunto de validacion :\t200\n"
      ]
     }
    ],
@@ -21,15 +24,14 @@
     "# la fuente del codigo es: https://github.com/sankit1/cv-tricks.com\n",
     "\n",
     "#importa la clase conjuntoDeDatos, esta obtiene las imagenes de entrenamiento por cada subcarpeta o clases de imagenes. \n",
-    "import conjuntoDeDatos\n",
-    "import CNN\n",
+    "import CNN;conjuntoDeDatos\n",
     "import tensorflow as tf\n",
-    "import time\n",
     "from datetime import timedelta\n",
-    "import math\n",
-    "import random\n",
+    "import random;os;math;time\n",
     "import numpy as np\n",
-    "import os\n",
+    "\n",
+    "# instanciar CNN\n",
+    "cnncapas = CNN.CNN()\n",
     "\n",
     "# Agregar semilla para que la inicialización aleatoria sea consistente\n",
     "from numpy.random import seed\n",
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -82,13 +84,13 @@
     "tensorDeEntrada = tf.placeholder(tf.float32, shape=[None, tamanoDeImagenes,tamanoDeImagenes,numeroDeColoresPorImagen], name='tensorDeEntrada')\n",
     "\n",
     "## Etiquetas\n",
-    "tensorDeClases = tf.placeholder(tf.float32, shape=[None, numeroClases], name='tensorDeClases')\n",
+    "tensorDeClases = tf.placeholder(tf.float32, shape=[None, numeroClases], name='tensorDeEntrada')\n",
     "tensorDeClasesAplanado = tf.argmax(tensorDeClases, dimension=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -100,33 +102,22 @@
     "\n",
     "#Configuracion de la primera capa oculta, el tamaño del filtro es 3 y el numero de filtros es 32\n",
     "\n",
-    "capaConvolucional1 = CNN.CNN.crearCapaConvolucional(tensorDeEntrada=tensorDeEntrada,\n",
-    "               numeroDeCanales=numeroDeColoresPorImagen,\n",
-    "               tamanoDelFiltro=3,\n",
-    "               numeroDeFiltros=32)\n",
-    "\n",
-    "capaConvolucional2 = CNN.CNN.crearCapaConvolucional(tensorDeEntrada=capaConvolucional1,\n",
-    "               numeroDeCanales=numeroFiltrosCapaConvolucional1,\n",
-    "               tamanoDelFiltro=3,\n",
-    "               numeroDeFiltros=32)\n",
-    "\n",
-    "capaConvolucional3= CNN.CNN.crearCapaConvolucional(tensorDeEntrada=capaConvolucional1,\n",
-    "               numeroDeCanales=32,\n",
-    "               tamanoDelFiltro=3,\n",
-    "               numeroDeFiltros=64)\n",
-    "\n",
-    "capaPlana = CNN.CNN.crearCapaAplanada(capaConvolucional3)\n",
-    "\n",
-    "capaTotalmenteConectada1 = CNN.CNN.crearCapaTotalmenteConectada(tensorDeEntrada=capaPlana,\n",
-    "                     num_inputs=capaPlana.get_shape()[1:4].num_elements(),\n",
-    "                     num_outputs=128,\n",
-    "                     use_relu=True)\n",
-    "\n",
-    "capaTotalmenteConectada2 = CNN.CNN.crearCapaTotalmenteConectada(tensorDeEntrada=capaTotalmenteConectada1,\n",
-    "                     num_inputs=128,\n",
-    "                     num_outputs=numeroClases,\n",
-    "                     use_relu=False)\n",
-    "\n",
+    "capaConvolucional1 = cnncapas.crearCapaConvolucional(tensorDeEntrada=tensorDeEntrada,numeroDeCanales=numeroDeColoresPorImagen,tamanoDelFiltro=3,numeroDeFiltros=32)\n",
+    "capaConvolucional2 = cnncapas.crearCapaConvolucional(tensorDeEntrada=capaConvolucional1,numeroDeCanales=32,tamanoDelFiltro=3,numeroDeFiltros=32)\n",
+    "capaConvolucional3= cnncapas.crearCapaConvolucional(tensorDeEntrada=capaConvolucional2,numeroDeCanales=32,tamanoDelFiltro=3,numeroDeFiltros=64)\n",
+    "capaPlana = cnncapas.crearCapaAplanada(capaConvolucional3)\n",
+    "capaTotalmenteConectada1 = cnncapas.crearCapaTotalmenteConectada(tensorDeEntrada=capaPlana,num_inputs=capaPlana.get_shape()[1:4].num_elements(),num_outputs=128,use_relu=True)\n",
+    "capaTotalmenteConectada2 = cnncapas.crearCapaTotalmenteConectada(tensorDeEntrada=capaTotalmenteConectada1,num_inputs=128,num_outputs=numeroClases,use_relu=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "#Softmax: Calcula las activaciones softmax, los argumentos de la funcion son:\n",
     "## logits: es un tenson no vacio.  Puede ser uno de los siguientes tipos \"half, float32, float64\"\n",
     "## dim: la dimension softmax puede ser realidad en: el valor default es -1, el cual indica la ultima dimension.\n",
@@ -154,7 +145,8 @@
     "exactitudDelModelo = tf.reduce_mean(tf.cast(correccionDePrediccion, tf.float32))\n",
     "\n",
     "#inicializar las variables.\n",
-    "session.run(tf.global_variables_initializer())"
+    "tf.summary.FileWriter(\"/tmp/tensorflow/\", session.graph)\n",
+    "session.run(tf.global_variables_initializer())\n"
    ]
   },
   {
@@ -163,7 +155,140 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------- FUNCION DE ENTRENAMIENTO  ------------------\n",
+      "numero de imagenes para entrenamiento 800\n",
+      "-- iteracion # 1 con imagenes # 32\n",
+      "siguiente lote, inicio: 0, fin: 32\n",
+      "siguiente lote, inicio: 0, fin: 32\n",
+      "mostrar epoca 25\n",
+      "Training epoca 1 --- Exactitud del entranamiento: 100.0%, Exactitud de validacion: 100.0%,  perida de validacion: 0.546\n",
+      "-- iteracion # 2 con imagenes # 32\n",
+      "siguiente lote, inicio: 32, fin: 64\n",
+      "siguiente lote, inicio: 32, fin: 64\n",
+      "-- iteracion # 3 con imagenes # 32\n",
+      "siguiente lote, inicio: 64, fin: 96\n",
+      "siguiente lote, inicio: 64, fin: 96\n",
+      "-- iteracion # 4 con imagenes # 32\n",
+      "siguiente lote, inicio: 96, fin: 128\n",
+      "siguiente lote, inicio: 96, fin: 128\n",
+      "-- iteracion # 5 con imagenes # 32\n",
+      "siguiente lote, inicio: 128, fin: 160\n",
+      "siguiente lote, inicio: 128, fin: 160\n",
+      "-- iteracion # 6 con imagenes # 32\n",
+      "siguiente lote, inicio: 160, fin: 192\n",
+      "siguiente lote, inicio: 160, fin: 192\n",
+      "-- iteracion # 7 con imagenes # 32\n",
+      "siguiente lote, inicio: 192, fin: 224\n",
+      "siguiente lote, inicio: 0, fin: 32\n",
+      "-- iteracion # 8 con imagenes # 32\n",
+      "siguiente lote, inicio: 224, fin: 256\n",
+      "siguiente lote, inicio: 32, fin: 64\n",
+      "-- iteracion # 9 con imagenes # 32\n",
+      "siguiente lote, inicio: 256, fin: 288\n",
+      "siguiente lote, inicio: 64, fin: 96\n",
+      "-- iteracion # 10 con imagenes # 32\n",
+      "siguiente lote, inicio: 288, fin: 320\n",
+      "siguiente lote, inicio: 96, fin: 128\n",
+      "-- iteracion # 11 con imagenes # 32\n",
+      "siguiente lote, inicio: 320, fin: 352\n",
+      "siguiente lote, inicio: 128, fin: 160\n",
+      "-- iteracion # 12 con imagenes # 32\n",
+      "siguiente lote, inicio: 352, fin: 384\n",
+      "siguiente lote, inicio: 160, fin: 192\n",
+      "-- iteracion # 13 con imagenes # 32\n",
+      "siguiente lote, inicio: 384, fin: 416\n",
+      "siguiente lote, inicio: 0, fin: 32\n",
+      "-- iteracion # 14 con imagenes # 32\n",
+      "siguiente lote, inicio: 416, fin: 448\n",
+      "siguiente lote, inicio: 32, fin: 64\n",
+      "-- iteracion # 15 con imagenes # 32\n",
+      "siguiente lote, inicio: 448, fin: 480\n",
+      "siguiente lote, inicio: 64, fin: 96\n",
+      "-- iteracion # 16 con imagenes # 32\n",
+      "siguiente lote, inicio: 480, fin: 512\n",
+      "siguiente lote, inicio: 96, fin: 128\n",
+      "-- iteracion # 17 con imagenes # 32\n",
+      "siguiente lote, inicio: 512, fin: 544\n",
+      "siguiente lote, inicio: 128, fin: 160\n",
+      "-- iteracion # 18 con imagenes # 32\n",
+      "siguiente lote, inicio: 544, fin: 576\n",
+      "siguiente lote, inicio: 160, fin: 192\n",
+      "-- iteracion # 19 con imagenes # 32\n",
+      "siguiente lote, inicio: 576, fin: 608\n",
+      "siguiente lote, inicio: 0, fin: 32\n",
+      "-- iteracion # 20 con imagenes # 32\n",
+      "siguiente lote, inicio: 608, fin: 640\n",
+      "siguiente lote, inicio: 32, fin: 64\n",
+      "-- iteracion # 21 con imagenes # 32\n",
+      "siguiente lote, inicio: 640, fin: 672\n",
+      "siguiente lote, inicio: 64, fin: 96\n",
+      "-- iteracion # 22 con imagenes # 32\n",
+      "siguiente lote, inicio: 672, fin: 704\n",
+      "siguiente lote, inicio: 96, fin: 128\n",
+      "-- iteracion # 23 con imagenes # 32\n",
+      "siguiente lote, inicio: 704, fin: 736\n",
+      "siguiente lote, inicio: 128, fin: 160\n",
+      "-- iteracion # 24 con imagenes # 32\n",
+      "siguiente lote, inicio: 736, fin: 768\n",
+      "siguiente lote, inicio: 160, fin: 192\n",
+      "-- iteracion # 25 con imagenes # 32\n",
+      "siguiente lote, inicio: 768, fin: 800\n",
+      "siguiente lote, inicio: 0, fin: 32\n",
+      "-- iteracion # 26 con imagenes # 32\n",
+      "siguiente lote, inicio: 0, fin: 32\n",
+      "siguiente lote, inicio: 32, fin: 64\n",
+      "mostrar epoca 25\n",
+      "Training epoca 2 --- Exactitud del entranamiento: 100.0%, Exactitud de validacion: 100.0%,  perida de validacion: 0.001\n",
+      "-- iteracion # 27 con imagenes # 32\n",
+      "siguiente lote, inicio: 32, fin: 64\n",
+      "siguiente lote, inicio: 64, fin: 96\n",
+      "-- iteracion # 28 con imagenes # 32\n",
+      "siguiente lote, inicio: 64, fin: 96\n",
+      "siguiente lote, inicio: 96, fin: 128\n",
+      "-- iteracion # 29 con imagenes # 32\n",
+      "siguiente lote, inicio: 96, fin: 128\n",
+      "siguiente lote, inicio: 128, fin: 160\n",
+      "-- iteracion # 30 con imagenes # 32\n",
+      "siguiente lote, inicio: 128, fin: 160\n",
+      "siguiente lote, inicio: 160, fin: 192\n",
+      "-- iteracion # 31 con imagenes # 32\n",
+      "siguiente lote, inicio: 160, fin: 192\n",
+      "siguiente lote, inicio: 0, fin: 32\n",
+      "-- iteracion # 32 con imagenes # 32\n",
+      "siguiente lote, inicio: 192, fin: 224\n",
+      "siguiente lote, inicio: 32, fin: 64\n",
+      "-- iteracion # 33 con imagenes # 32\n",
+      "siguiente lote, inicio: 224, fin: 256\n",
+      "siguiente lote, inicio: 64, fin: 96\n",
+      "-- iteracion # 34 con imagenes # 32\n",
+      "siguiente lote, inicio: 256, fin: 288\n",
+      "siguiente lote, inicio: 96, fin: 128\n",
+      "-- iteracion # 35 con imagenes # 32\n",
+      "siguiente lote, inicio: 288, fin: 320\n",
+      "siguiente lote, inicio: 128, fin: 160\n",
+      "-- iteracion # 36 con imagenes # 32\n",
+      "siguiente lote, inicio: 320, fin: 352\n",
+      "siguiente lote, inicio: 160, fin: 192\n",
+      "-- iteracion # 37 con imagenes # 32\n",
+      "siguiente lote, inicio: 352, fin: 384\n",
+      "siguiente lote, inicio: 0, fin: 32\n",
+      "-- iteracion # 38 con imagenes # 32\n",
+      "siguiente lote, inicio: 384, fin: 416\n",
+      "siguiente lote, inicio: 32, fin: 64\n",
+      "-- iteracion # 39 con imagenes # 32\n",
+      "siguiente lote, inicio: 416, fin: 448\n",
+      "siguiente lote, inicio: 64, fin: 96\n",
+      "-- iteracion # 40 con imagenes # 32\n",
+      "siguiente lote, inicio: 448, fin: 480\n",
+      "siguiente lote, inicio: 96, fin: 128\n"
+     ]
+    }
+   ],
    "source": [
     "def mostrarProgreso(epoca, feed_dict_train, feed_dict_validate, perdidaDeValidacion):\n",
     "    exactitudDeEntrenamiento = session.run(exactitudDelModelo, feed_dict=feed_dict_train)\n",
@@ -174,8 +299,6 @@
     "recuentoIteraciones = 0\n",
     "\n",
     "\"\"\" batch-size (tamaño del lote por iteracion), cuando se entrena una red no se  alimenta con todo el conjunto de datos, se hace por medio de iteracion y cada iteracion tiene un tamaño, frecuentemente es 16 o 32\"\"\"\n",
-    "\n",
-    "#tamanoLotePorIteracion = 32\n",
     "saver = tf.train.Saver()\n",
     "\n",
     "def entrenarModelo(totalIteraciones):\n",
@@ -184,29 +307,29 @@
     "\n",
     "    global recuentoIteraciones\n",
     "    for iteracion in range(recuentoIteraciones,recuentoIteraciones + totalIteraciones):\n",
-    "        print(\"-- iteracion # \"+str(iteracion+1))\n",
+    "        print(\"-- iteracion # \"+str(iteracion+1)+\" con imagenes # \"+str(tamanoLotePorIteracion))\n",
     "        entrenamientoPaquete_imagenes, entrenamientoPaquete_etiquetas, entrenamientoPaquete_nombres, entrenamientoPaquete_clases = data.entrenamiento.siguienteLote(tamanoLotePorIteracion)\n",
     "        validacionPaquete_imagenes, validacionPaquete_etiquetas, validacionPaquete_nombres, validacionPaquete_clases = data.validacion.siguienteLote(tamanoLotePorIteracion)\n",
     "\n",
-    "        feed_dict_tr = {x: entrenamientoPaquete_imagenes,tensorDeClases: entrenamientoPaquete_etiquetas}\n",
-    "        feed_dict_val = {x: validacionPaquete_imagenes,tensorDeClases: validacionPaquete_etiquetas}\n",
+    "        entrenamiento_imagenesYetiquetasPorEpoca = {tensorDeEntrada: entrenamientoPaquete_imagenes,tensorDeClases: entrenamientoPaquete_etiquetas}\n",
+    "        validacion_imagenesYetiquetasPorEpoca = {tensorDeEntrada: validacionPaquete_imagenes,tensorDeClases: validacionPaquete_etiquetas}\n",
     "        \n",
-    "        session.run(optimizador, feed_dict=feed_dict_tr)\n",
+    "        session.run(optimizador, feed_dict=entrenamiento_imagenesYetiquetasPorEpoca)\n",
     "\n",
     "        if iteracion % int(data.entrenamiento.recuento/tamanoLotePorIteracion) == 0:\n",
     "            print(\"mostrar epoca \"+str(int(data.entrenamiento.recuento/tamanoLotePorIteracion)))\n",
-    "            perdidadDeValidacion = session.run(perdidaTotalDeErrorEnClasificacion, feed_dict=feed_dict_val)\n",
+    "            perdidadDeValidacion = session.run(perdidaTotalDeErrorEnClasificacion, feed_dict=validacion_imagenesYetiquetasPorEpoca)\n",
     "\n",
     "            \"\"\" epoca (epoch) una epoca contiene un conjunto de iteracion que alimentan el modelo \"\"\"\n",
     "            epoca = int(iteracion / int(data.entrenamiento.recuento/tamanoLotePorIteracion))\n",
     "\n",
-    "            mostrarProgreso(epoca, feed_dict_tr, feed_dict_val, perdidadDeValidacion)\n",
-    "            \"\"\"saver.save(session, 'dogs-cats-model')\"\"\"\n",
+    "            mostrarProgreso(epoca, entrenamiento_imagenesYetiquetasPorEpoca, validacion_imagenesYetiquetasPorEpoca, perdidadDeValidacion)\n",
+    "            saver.save(session, './dogs-cats-model')\n",
     "\n",
     "    recuentoIteraciones += totalIteraciones\n",
     "\n",
     "entrenarModelo(totalIteraciones=3000)\n",
-    "print(\"end\")"
+    "print(\"Fin del entrenamiento\")"
    ]
   }
  ],
