--- a/TensorFlow con Docker/files/CNNcatdogs/entrenamiento.ipynb
+++ b/TensorFlow con Docker/files/CNNcatdogs/entrenamiento.ipynb
@@ -2,21 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ruta de datos de entrenamiento /notebooks/CNNcatdogs/imagenes/train/\n",
-      "Now going to read dog files (indiceDeClase: 0)\n",
-      "Now going to read cat files (indiceDeClase: 1)\n",
-      "Completado el proceso de lecturada de imagenes.\n",
-      "Numero de imagenes en el conjunto de entrenamiento:\t800\n",
-      "Numero de imagenes en el conjunto de validacion :\t200\n"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-4633ad6a07ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtimedelta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
      ]
     }
    ],
@@ -24,10 +23,14 @@
     "# la fuente del codigo es: https://github.com/sankit1/cv-tricks.com\n",
     "\n",
     "#importa la clase conjuntoDeDatos, esta obtiene las imagenes de entrenamiento por cada subcarpeta o clases de imagenes. \n",
-    "import CNN;conjuntoDeDatos\n",
+    "import CNN\n",
+    "import conjuntoDeDatos\n",
     "import tensorflow as tf\n",
     "from datetime import timedelta\n",
-    "import random;os;math;time\n",
+    "import random\n",
+    "import os\n",
+    "import math\n",
+    "import time\n",
     "import numpy as np\n",
     "\n",
     "# instanciar CNN\n",
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -155,140 +158,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------- FUNCION DE ENTRENAMIENTO  ------------------\n",
-      "numero de imagenes para entrenamiento 800\n",
-      "-- iteracion # 1 con imagenes # 32\n",
-      "siguiente lote, inicio: 0, fin: 32\n",
-      "siguiente lote, inicio: 0, fin: 32\n",
-      "mostrar epoca 25\n",
-      "Training epoca 1 --- Exactitud del entranamiento: 100.0%, Exactitud de validacion: 100.0%,  perida de validacion: 0.546\n",
-      "-- iteracion # 2 con imagenes # 32\n",
-      "siguiente lote, inicio: 32, fin: 64\n",
-      "siguiente lote, inicio: 32, fin: 64\n",
-      "-- iteracion # 3 con imagenes # 32\n",
-      "siguiente lote, inicio: 64, fin: 96\n",
-      "siguiente lote, inicio: 64, fin: 96\n",
-      "-- iteracion # 4 con imagenes # 32\n",
-      "siguiente lote, inicio: 96, fin: 128\n",
-      "siguiente lote, inicio: 96, fin: 128\n",
-      "-- iteracion # 5 con imagenes # 32\n",
-      "siguiente lote, inicio: 128, fin: 160\n",
-      "siguiente lote, inicio: 128, fin: 160\n",
-      "-- iteracion # 6 con imagenes # 32\n",
-      "siguiente lote, inicio: 160, fin: 192\n",
-      "siguiente lote, inicio: 160, fin: 192\n",
-      "-- iteracion # 7 con imagenes # 32\n",
-      "siguiente lote, inicio: 192, fin: 224\n",
-      "siguiente lote, inicio: 0, fin: 32\n",
-      "-- iteracion # 8 con imagenes # 32\n",
-      "siguiente lote, inicio: 224, fin: 256\n",
-      "siguiente lote, inicio: 32, fin: 64\n",
-      "-- iteracion # 9 con imagenes # 32\n",
-      "siguiente lote, inicio: 256, fin: 288\n",
-      "siguiente lote, inicio: 64, fin: 96\n",
-      "-- iteracion # 10 con imagenes # 32\n",
-      "siguiente lote, inicio: 288, fin: 320\n",
-      "siguiente lote, inicio: 96, fin: 128\n",
-      "-- iteracion # 11 con imagenes # 32\n",
-      "siguiente lote, inicio: 320, fin: 352\n",
-      "siguiente lote, inicio: 128, fin: 160\n",
-      "-- iteracion # 12 con imagenes # 32\n",
-      "siguiente lote, inicio: 352, fin: 384\n",
-      "siguiente lote, inicio: 160, fin: 192\n",
-      "-- iteracion # 13 con imagenes # 32\n",
-      "siguiente lote, inicio: 384, fin: 416\n",
-      "siguiente lote, inicio: 0, fin: 32\n",
-      "-- iteracion # 14 con imagenes # 32\n",
-      "siguiente lote, inicio: 416, fin: 448\n",
-      "siguiente lote, inicio: 32, fin: 64\n",
-      "-- iteracion # 15 con imagenes # 32\n",
-      "siguiente lote, inicio: 448, fin: 480\n",
-      "siguiente lote, inicio: 64, fin: 96\n",
-      "-- iteracion # 16 con imagenes # 32\n",
-      "siguiente lote, inicio: 480, fin: 512\n",
-      "siguiente lote, inicio: 96, fin: 128\n",
-      "-- iteracion # 17 con imagenes # 32\n",
-      "siguiente lote, inicio: 512, fin: 544\n",
-      "siguiente lote, inicio: 128, fin: 160\n",
-      "-- iteracion # 18 con imagenes # 32\n",
-      "siguiente lote, inicio: 544, fin: 576\n",
-      "siguiente lote, inicio: 160, fin: 192\n",
-      "-- iteracion # 19 con imagenes # 32\n",
-      "siguiente lote, inicio: 576, fin: 608\n",
-      "siguiente lote, inicio: 0, fin: 32\n",
-      "-- iteracion # 20 con imagenes # 32\n",
-      "siguiente lote, inicio: 608, fin: 640\n",
-      "siguiente lote, inicio: 32, fin: 64\n",
-      "-- iteracion # 21 con imagenes # 32\n",
-      "siguiente lote, inicio: 640, fin: 672\n",
-      "siguiente lote, inicio: 64, fin: 96\n",
-      "-- iteracion # 22 con imagenes # 32\n",
-      "siguiente lote, inicio: 672, fin: 704\n",
-      "siguiente lote, inicio: 96, fin: 128\n",
-      "-- iteracion # 23 con imagenes # 32\n",
-      "siguiente lote, inicio: 704, fin: 736\n",
-      "siguiente lote, inicio: 128, fin: 160\n",
-      "-- iteracion # 24 con imagenes # 32\n",
-      "siguiente lote, inicio: 736, fin: 768\n",
-      "siguiente lote, inicio: 160, fin: 192\n",
-      "-- iteracion # 25 con imagenes # 32\n",
-      "siguiente lote, inicio: 768, fin: 800\n",
-      "siguiente lote, inicio: 0, fin: 32\n",
-      "-- iteracion # 26 con imagenes # 32\n",
-      "siguiente lote, inicio: 0, fin: 32\n",
-      "siguiente lote, inicio: 32, fin: 64\n",
-      "mostrar epoca 25\n",
-      "Training epoca 2 --- Exactitud del entranamiento: 100.0%, Exactitud de validacion: 100.0%,  perida de validacion: 0.001\n",
-      "-- iteracion # 27 con imagenes # 32\n",
-      "siguiente lote, inicio: 32, fin: 64\n",
-      "siguiente lote, inicio: 64, fin: 96\n",
-      "-- iteracion # 28 con imagenes # 32\n",
-      "siguiente lote, inicio: 64, fin: 96\n",
-      "siguiente lote, inicio: 96, fin: 128\n",
-      "-- iteracion # 29 con imagenes # 32\n",
-      "siguiente lote, inicio: 96, fin: 128\n",
-      "siguiente lote, inicio: 128, fin: 160\n",
-      "-- iteracion # 30 con imagenes # 32\n",
-      "siguiente lote, inicio: 128, fin: 160\n",
-      "siguiente lote, inicio: 160, fin: 192\n",
-      "-- iteracion # 31 con imagenes # 32\n",
-      "siguiente lote, inicio: 160, fin: 192\n",
-      "siguiente lote, inicio: 0, fin: 32\n",
-      "-- iteracion # 32 con imagenes # 32\n",
-      "siguiente lote, inicio: 192, fin: 224\n",
-      "siguiente lote, inicio: 32, fin: 64\n",
-      "-- iteracion # 33 con imagenes # 32\n",
-      "siguiente lote, inicio: 224, fin: 256\n",
-      "siguiente lote, inicio: 64, fin: 96\n",
-      "-- iteracion # 34 con imagenes # 32\n",
-      "siguiente lote, inicio: 256, fin: 288\n",
-      "siguiente lote, inicio: 96, fin: 128\n",
-      "-- iteracion # 35 con imagenes # 32\n",
-      "siguiente lote, inicio: 288, fin: 320\n",
-      "siguiente lote, inicio: 128, fin: 160\n",
-      "-- iteracion # 36 con imagenes # 32\n",
-      "siguiente lote, inicio: 320, fin: 352\n",
-      "siguiente lote, inicio: 160, fin: 192\n",
-      "-- iteracion # 37 con imagenes # 32\n",
-      "siguiente lote, inicio: 352, fin: 384\n",
-      "siguiente lote, inicio: 0, fin: 32\n",
-      "-- iteracion # 38 con imagenes # 32\n",
-      "siguiente lote, inicio: 384, fin: 416\n",
-      "siguiente lote, inicio: 32, fin: 64\n",
-      "-- iteracion # 39 con imagenes # 32\n",
-      "siguiente lote, inicio: 416, fin: 448\n",
-      "siguiente lote, inicio: 64, fin: 96\n",
-      "-- iteracion # 40 con imagenes # 32\n",
-      "siguiente lote, inicio: 448, fin: 480\n",
-      "siguiente lote, inicio: 96, fin: 128\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def mostrarProgreso(epoca, feed_dict_train, feed_dict_validate, perdidaDeValidacion):\n",
     "    exactitudDeEntrenamiento = session.run(exactitudDelModelo, feed_dict=feed_dict_train)\n",
