update training and add testing model files

--- a/TensorFlow con Docker/files/CNNcatdogs/entrenamiento.ipynb
+++ b/TensorFlow con Docker/files/CNNcatdogs/entrenamiento.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-4633ad6a07ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtimedelta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ruta de datos de entrenamiento /notebooks/CNNcatdogs/imagenes/train/\n",
+      "Now going to read dog files (indiceDeClase: 0)\n",
+      "Now going to read cat files (indiceDeClase: 1)\n"
      ]
     }
    ],
@@ -87,7 +85,7 @@
     "tensorDeEntrada = tf.placeholder(tf.float32, shape=[None, tamanoDeImagenes,tamanoDeImagenes,numeroDeColoresPorImagen], name='tensorDeEntrada')\n",
     "\n",
     "## Etiquetas\n",
-    "tensorDeClases = tf.placeholder(tf.float32, shape=[None, numeroClases], name='tensorDeEntrada')\n",
+    "tensorDeClases = tf.placeholder(tf.float32, shape=[None, numeroClases], name='tensorDeClases')\n",
     "tensorDeClasesAplanado = tf.argmax(tensorDeClases, dimension=1)"
    ]
   },
@@ -194,7 +192,7 @@
     "            epoca = int(iteracion / int(data.entrenamiento.recuento/tamanoLotePorIteracion))\n",
     "\n",
     "            mostrarProgreso(epoca, entrenamiento_imagenesYetiquetasPorEpoca, validacion_imagenesYetiquetasPorEpoca, perdidadDeValidacion)\n",
-    "            saver.save(session, './dogs-cats-model')\n",
+    "            saver.save(session, './model/dogs-cats-model_20_02_2018_v.1')\n",
     "\n",
     "    recuentoIteraciones += totalIteraciones\n",
     "\n",
